--- a/src/main/resources/templates/streaming.html
+++ b/src/main/resources/templates/streaming.html
@@ -17,7 +17,7 @@
 
     <!-- 컨트롤 버튼 -->
     <div class="controls">
-        <button id="toggle-webcam" class="control-button">카메라 끄기</button>
+        <button id="toggle-webcam" class="control-button">카메라 켜기</button>
     </div>
 </main>
 
